added file loading feature

--- a/src/main/resources/pl/edu/agh/operationsresearch/algorithm/view/AlgorithmView.fxml
+++ b/src/main/resources/pl/edu/agh/operationsresearch/algorithm/view/AlgorithmView.fxml
@@ -28,7 +28,7 @@
             </GridPane>
         </HBox>
 
-        <Button text="Load test!" minWidth="75" onAction="#loadTest"/>
+        <Button text="Load!" minWidth="75" onAction="#loadTest"/>
         <Button text="Start!" minWidth="75" onAction="#startAlgorithm"/>
     </VBox>
 </BorderPane>
